tests/cases/standard-library/errors/collections/std-collections-implicit-zone-untracked.ari
fn main() -> i64 {
  var map = std::collections::HashMap<i64, i64> {
    hash: std::collections::hash_i64,
    keys: 0u64 as ptr i64,
    values: 0u64 as ptr i64,
    states: 0u64 as ptr i64,
    len: 0,
    capacity: 0,
  };

  map.reserve(1);
  return 0;
}
